# PixelPopSortTool

./: .gitignore  README.md  pixel_level_tool.spec  pyproject.toml
level/: 1.json
scripts/: build.ps1  run.ps1  setup.ps1  test.ps1
src/marble_sort_pixel_level_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pixel_level_tool/: __init__.py  __main__.py  app.py
src/pixel_level_tool/domain/: __init__.py  commands.py  enums.py  level_models.py  shapes.py
src/pixel_level_tool/services/: image_importer.py  legacy_level_importer.py  level_converter.py  level_serializer.py  level_validator.py  mechanics_batch.py  mechanics_scanner.py  recent_files_service.py  settings_service.py
src/pixel_level_tool/ui/: __init__.py  main_window.py  theme.py
src/pixel_level_tool/ui/dialogs/: image_import_dialog.py  new_level_dialog.py  replace_color_dialog.py  resize_grid_dialog.py
src/pixel_level_tool/ui/widgets/: balance_panel.py  box_grid_editor.py  box_inspector.py  color_palette.py  pixel_grid_editor.py  shape_palette.py  validation_panel.py
tests/: test_box_effect_obstacle_ui.py  test_box_grid.py  test_box_grid_editor.py  test_color_palette.py  test_effect_obstacle_serializer.py  test_effect_obstacle_validator.py  test_gui_smoke.py  test_image_import_dialog.py  test_image_importer.py  test_legacy_level_importer.py  test_level_converter.py  test_mechanics_batch.py  test_mechanics_scanner.py  test_pixel_grid.py  test_pixel_grid_editor_resize.py  test_serializer.py  test_shapes.py  test_validator.py
