[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marble-sort-pixel-level-tool"
version = "0.1.0"
description = "Desktop PixelMode level editor for MarbleSort."
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.7",
  "Pillow>=10.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-qt>=4.4",
  "pyinstaller>=6.8",
]

[project.scripts]
MarbleSortPixelLevelTool = "pixel_level_tool.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

